white space fix

--- a/components/signUp.css
+++ b/components/signUp.css
@@ -38,6 +38,7 @@
     border-radius: 15px;
     box-shadow: 0 4px 8px 0 rgba(17, 5, 5, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
     background-color: #FFF;
+    padding: 20px 0;
 }
 
 form { 
